fixed dropdown css

--- a/web-app/pages/home.html
+++ b/web-app/pages/home.html
@@ -42,7 +42,7 @@
 
         <div class="col-6">
             <div class="row">
-                <label class="dropdown" width="200px">
+                <label class="dropdown" style="width: 200px;">
                     <select id="selector" oninput="CreateTableFromJSON()">
                         <option>asdasdasdasdas</option>
                         <script type="text/javascript">dropDownClass()</script>
