--- a/web-app/pages/home.html
+++ b/web-app/pages/home.html
@@ -43,7 +43,7 @@
         <div class="col-6">
             <div class="row">
                 <label class="dropdown" style="width: 200px;">
-                    <select id="selector" oninput="CreateTableFromJSON()">
+                    <select id="selector1" oninput="CreateTableFromJSON()">
                         <option>asdasdasdasdas</option>
                         <script type="text/javascript">dropDownClass()</script>
                     </select>
